
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.pandacube.lib</groupId>
    
    <artifactId>pandalib-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>PandaLib-Parent</name>
    
    <organization>
        <name>Pandacube</name>
        <url>https://www.pandacube.fr/</url>
    </organization>
    
    <developers>
        <developer>
            <id>marcbal</id>
            <name>Marc Baloup</name>
            <url>https://github.com/marcbal/</url>
        </developer>
    </developers>
    
    <inceptionYear>2015</inceptionYear>
    
    <ciManagement>
        <system>jenkins</system>
        <url>https://ci.pandacube.fr/</url>
    </ciManagement>
    
    <scm>
    	<url>https://git.pandacube.fr/PandacubeFr/</url>
    </scm>

    <properties>
        <build.number>unknown</build.number>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <bungeecord.version>1.19-R0.1-SNAPSHOT</bungeecord.version>
        <paper.version>1.19-R0.1</paper.version>
        <mc.version>1.19</mc.version>
    </properties>
	
    <modules>
        <module>Bungee</module>
        <module>CLI</module>
        <module>Core</module>
        <module>Paper</module>
    </modules>

    <dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
    </dependencies>

    <build>
        <finalName>${project.name}-${build.number}</finalName>
        <plugins>
            <plugin>
                <groupId>net.md-5</groupId>
                <artifactId>scriptus</artifactId>
                <version>0.3.1</version>
                <configuration>
                    <format>git:${project.name}:${project.version}:%s:${build.number}</format>
                </configuration>
                <executions>
                    <execution>
                        <phase>initialize</phase>
                        <goals>
                            <goal>describe</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <!--suppress UnresolvedMavenProperty -->
                            <Implementation-Version>${describe}</Implementation-Version>
                            <Specification-Version>${maven.build.timestamp}</Specification-Version>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <!--This plugin's configuration is used to store Eclipse 
                    m2e settings only. It has no influence on the Maven build itself. -->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>net.md-5</groupId>
                                        <artifactId>scriptus</artifactId>
                                        <versionRange>[0.3.1,)</versionRange>
                                        <goals>
                                            <goal>describe</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <execute>
                                            <runOnIncremental>false</runOnIncremental>
                                        </execute>
                                    </action>
                                </pluginExecution>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.apache.maven.plugins</groupId>
                                        <artifactId>maven-enforcer-plugin</artifactId>
                                        <versionRange>[1.0.0,)</versionRange>
                                        <goals>
                                            <goal>enforce</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore />
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
